@@ -13,7 +13,7 @@ repositories {
 }
 
 ext {
-    junitVersion = '5.8.2'
+    junitVersion = '5.9.2'
 }
 
 sourceCompatibility = '17'
@@ -35,6 +35,11 @@ javafx {
 
 dependencies {
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.0'
+    implementation 'org.hibernate:hibernate-core:5.2.10.Final'
+
+    implementation 'org.javassist:javassist:3.29.2-GA'
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
@@ -54,4 +59,8 @@ jlink {
 
 jlinkZip {
     group = 'distribution'
+}
+
+run {
+    jvmArgs = ['--module-path', 'C:\\Users\\Dragos\\source\\javafx-sdk-20.0.1\\lib', '--add-modules', 'javafx.controls,javafx.fxml']
 }
